--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -80,7 +80,6 @@
     justify-content: space-between;
     align-items: flex-start;
     gap: var(--space-3);
-    margin-top: calc(-1 * var(--space-1));
   }
 
   .messageArea {
